--- a/escom-bpm-web/src/main/webapp/view/errors/login-error.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/errors/login-error.xhtml
@@ -24,7 +24,9 @@
 
     <h:body>
         <h:form id="login" onsubmit="action='j_security_check';" prependId="false">
-            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding"/>
+            <p:messages id="messages" showDetail="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
+                <p:autoUpdate />
+            </p:messages>
             <p:panel styleClass="panelLogin">             
                 <p:panelGrid id="panelLogin" columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-12">
                     <p:graphicImage name="/images/escom_logo.jpg"  /> 
