--- a/escom-bpm-web/src/main/webapp/view/scaner/scanning.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/scaner/scanning.xhtml
@@ -62,7 +62,9 @@
                         </f:facet>
                     </p:menubar>
 
-                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding"/>
+                    <p:messages id="messages" showDetail="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
+                        <p:autoUpdate />
+                    </p:messages>
 
                     <p:panelGrid columns="3" layout="grid" columnClasses="ui-grid-col-4 col-padding, ui-grid-col-2 col-padding, ui-grid-col-6 col-padding" styleClass="ui-grid-col-12 col-padding">
                         <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 col-padding">                            
