--- a/escom-bpm-web/src/main/webapp/view/services/mail/mail-box.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/mail/mail-box.xhtml
@@ -29,7 +29,9 @@
                               onstart="document.getElementById('#{_frm}:btnClose').click();"> 
                     </p:hotkey>
                     <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
-                        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />  
+                        <p:messages id="messages" showDetail="true" closable="true" >
+                            <p:autoUpdate />
+                        </p:messages>
                         
                         <p:menubar styleClass="without-spaces">
                             <p:submenu label="#{bundle.Actions}" icon="ui-icon-gear" styleClass="submenu">
