--- a/escom-bpm-web/src/main/webapp/view/common/error-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/error-dlg.xhtml
@@ -13,7 +13,7 @@
                             update="exceptionDialog"
                             onexception="isClose = 1; PF('exceptionDialog').show();" />
                             
-    <p:dialog id="expireDialog" header="#{msg.SessionExpired}" resizable="false" modal="true" widgetVar="expireDialog" height="240px" width="550px">       
+    <p:dialog id="expireDialog" header="#{msg.SessionExpired}" resizable="false" modal="true" closable="true" closeOnEscape="true" widgetVar="expireDialog" height="240px" width="550px">
         <p:panelGrid layout="grid" columns="2" columnClasses="ui-grid-col-6, ui-grid-col-6" styleClass="ui-grid-col-12">
             <p:graphicImage name="/images/session_expired.jpg"/> 
             <p:outputLabel value="#{msg.SessionTimeout}" style="color: red;"/>
@@ -22,7 +22,7 @@
         </p:panelGrid>
     </p:dialog>
     
-    <p:dialog id="exceptionDialog" header="#{bundle.Error}" modal="true" widgetVar="exceptionDialog" height="500px">
+    <p:dialog id="exceptionDialog" header="#{bundle.Error}" modal="true" closable="true" closeOnEscape="true" widgetVar="exceptionDialog" height="500px">
         <p:panelGrid layout="grid" columns="1" styleClass="ui-grid-col-12">
             <p:outputLabel value="#{bundle.Message}" />: Exception '#{pfExceptionHandler.type}' occurred! #{pfExceptionHandler.message}
             <p:accordionPanel activeIndex="0">
