--- a/escom-bpm-web/src/main/webapp/view/common/item-select-btn.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/item-select-btn.xhtml
@@ -19,35 +19,34 @@
                          style="display: none;">
             <p:ajax event="dialogReturn" update="#{_itemPanel}"/>
         </p:commandButton>
-        
-        <h:panelGrid id="#{_itemPanel}" columns="2" columnClasses="ui-grid-col-10 col-padding, ui-grid-col-2 col-padding pull-right"
-                     styleClass="ui-grid-col-12 col-padding" style="border-collapse: collapse; border:0px;">
-            
-            <p:inputText id="item" value="#{_itemValue.fullName}" title="#{_titleItem}" styleClass="ui-grid-col-12"
-                         disabled="#{_disabled}" style="color: blue;"
-                         readonly="true"
-                         validator="#{_bean[_validateAction]}"
-                         required="#{param['isRequired'] == _required}"
-                         requiredMessage="#{bundle.Field} [#{_titleItem}] #{bundle.MustBeFilled}">
-                <f:ajax event="change" render="#{_itemPanel}" />
-                <f:attribute name="item" value="#{_itemValue}"/>
-            </p:inputText>
 
-            <p:splitButton  icon="ui-icon-extlink" disabled="#{_disabled}" title="#{bundle.Select}"
-                            styleClass="ui-grid-col-12" style="float: right;"
-                            onclick="document.getElementById('#{_frm}:mainTabView:#{_itemPanel}_btn').click();">                
-                <p:menuitem icon="ui-icon-newwin" value="#{bundle.OpenCard}" 
-                            onclick="document.getElementById('#{_frm}:mainTabView:#{_itemPanel}_btnOpenCard').click();"
-                            disabled="#{_disabled or _itemValue == null}"/>
-                <p:separator/>
-                <p:menuitem icon="ui-icon-close" value="#{bundle.ClearField}"
-                            actionListener="#{_bean.editedItem[_actionClear](null)}"
-                            oncomplete="itemChange = 1;"
-                            disabled="#{_disabled or _itemValue == null}"
-                            update="#{_itemPanel}"/>
-            </p:splitButton>
 
-        </h:panelGrid>
+        <h:panelGroup id="#{_itemPanel}">
+            <div class="ui-inputgroup">
+                <p:inputText id="item" value="#{_itemValue.fullName}" title="#{_titleItem}" styleClass="ui-grid-col-10"
+                             disabled="#{_disabled}" style="color: blue;"
+                             readonly="true"
+                             validator="#{_bean[_validateAction]}"
+                             required="#{param['isRequired'] == _required}"
+                             requiredMessage="#{bundle.Field} [#{_titleItem}] #{bundle.MustBeFilled}">
+                    <f:ajax event="change" render="#{_itemPanel}" />
+                    <f:attribute name="item" value="#{_itemValue}"/>
+                </p:inputText>
+
+                <p:splitButton  icon="ui-icon-extlink" disabled="#{_disabled}" title="#{bundle.Select}"
+                                onclick="document.getElementById('#{_frm}:mainTabView:#{_itemPanel}_btn').click();">
+                    <p:menuitem icon="ui-icon-newwin" value="#{bundle.OpenCard}"
+                                onclick="document.getElementById('#{_frm}:mainTabView:#{_itemPanel}_btnOpenCard').click();"
+                                disabled="#{_disabled or _itemValue == null}"/>
+                    <p:separator/>
+                    <p:menuitem icon="ui-icon-close" value="#{bundle.ClearField}"
+                                actionListener="#{_bean.editedItem[_actionClear](null)}"
+                                oncomplete="itemChange = 1;"
+                                disabled="#{_disabled or _itemValue == null}"
+                                update="#{_itemPanel}"/>
+                </p:splitButton>
+            </div>
+        </h:panelGroup>
     </h:panelGroup>
     
 </ui:composition>
