--- a/escom-bpm-web/src/main/webapp/view/docs/attaches/add-attache.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/attaches/add-attache.xhtml
@@ -54,7 +54,9 @@
                     </p:menubar>
                     
                     <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">
-                        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding"/>                                                
+                        <p:messages id="messages" showDetail="true" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
+                            <p:autoUpdate />
+                        </p:messages>
 
                         <p:fileUpload id="file" disabled="#{addAttacheBean.doc == null}"
                                       allowTypes="#{applicationBean.ALLOW_FILE_TYPES}"
