--- a/escom-bpm-web/src/main/webapp/view/docs/document.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/document.xhtml
@@ -22,7 +22,9 @@
     <ui:define name="body">
 
         <h:form id="downloadDocFRM"> 
-            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" /> 
+            <p:messages id="messages" showDetail="true" closable="true" >
+                <p:autoUpdate />
+            </p:messages>
             <p:panel styleClass="panelLogin">
                 <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-12" styleClass="ui-grid-col-12">
                     <p:graphicImage name="/images/escom_logo.jpg"  /> 
