--- a/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/messages/messages.xhtml
@@ -60,7 +60,9 @@
                     </p:menubar>                                                            
                     
                     <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 col-padding">
-                        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                        <p:messages id="messages" showDetail="true" closable="true" >
+                            <p:autoUpdate />
+                        </p:messages>
                         <p:selectBooleanCheckbox value="#{userMsgBean.showOnlyUnread}"
                                                 itemLabel="#{bundle.ShowOnlyUnReadMessage}">
                                 <p:ajax update="#{_frm}" listener="#{userMsgBean.onChangeChBoxShowMsgType()}"/> 
